[gd_scene load_steps=17 format=4 uid="uid://bqduey0wm2546"]

[ext_resource type="PackedScene" uid="uid://ctcdf0d5ca8to" path="res://Scenes/LevelComponents/level.tscn" id="1_xg7jv"]
[ext_resource type="Script" path="res://Scripts/level_1.gd" id="2_jv8og"]
[ext_resource type="TileSet" uid="uid://r1nd0b4oxfy7" path="res://Assets/Tilemaps/TileMapFloors.tres" id="3_0dsyt"]
[ext_resource type="PackedScene" uid="uid://bgpkpbwjrp3ta" path="res://Scenes/Objects/wooden_chair.tscn" id="4_tj5fj"]
[ext_resource type="PackedScene" uid="uid://e21vold366sx" path="res://Scenes/Objects/bed_1.tscn" id="5_wnhah"]
[ext_resource type="PackedScene" uid="uid://xiavs4qa7la2" path="res://Scenes/Objects/safe_with_door.tscn" id="6_mtq8i"]
[ext_resource type="PackedScene" uid="uid://dw1osfk1r4f2m" path="res://Scenes/Objects/shelf_1.tscn" id="7_a6ipv"]
[ext_resource type="PackedScene" uid="uid://epqt5kosb7wi" path="res://Scenes/Objects/boxes.tscn" id="8_jnptn"]
[ext_resource type="PackedScene" uid="uid://ku8wx7gs6mwo" path="res://Scenes/Objects/office_chair_1.tscn" id="9_hhg6s"]
[ext_resource type="PackedScene" uid="uid://k5ej5u307v22" path="res://Scenes/Objects/table_1.tscn" id="10_qnfk3"]
[ext_resource type="PackedScene" uid="uid://d34ll0jr4e4ha" path="res://Scenes/Objects/table_2.tscn" id="11_1fsyt"]
[ext_resource type="PackedScene" uid="uid://uo06l6mgpn6h" path="res://Scenes/Objects/sofa_chair_2.tscn" id="12_led41"]
[ext_resource type="PackedScene" uid="uid://b08npnr2xarvp" path="res://Scenes/Objects/TV.tscn" id="13_ikg8w"]
[ext_resource type="PackedScene" uid="uid://d2eo6xfdrn8fh" path="res://Scenes/Objects/door.tscn" id="14_06no4"]
[ext_resource type="TileSet" uid="uid://jmn824y57bw8" path="res://Assets/Tilemaps/TileMapWallsFloors.tres" id="15_gwnce"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhefo"]
size = Vector2(589, 733)

[node name="Level2" instance=ExtResource("1_xg7jv")]
script = ExtResource("2_jv8og")

[node name="Floors" type="TileMapLayer" parent="." index="2"]
tile_map_data = PackedByteArray("AAD+//z/AQANAAcAAAD9//z/AQAMAAcAAAD8//z/AQANAAcAAAD7//z/AQAMAAcAAAD6//z/AQANAAcAAAD5//z/AQAMAAcAAAD4//z/AQANAAcAAAD3//z/AQAMAAcAAAD2//z/AQANAAcAAAD1//z/AQAMAAcAAAD9//v/AQAMAAYAAAD+//v/AQANAAYAAAD///v/AQAMAAYAAAD///z/AQAMAAcAAAAAAPz/AQANAAcAAAABAPz/AQAMAAcAAAACAPz/AQANAAcAAAADAPz/AQAMAAcAAAAEAPz/AQANAAcAAAAFAPz/AQAMAAcAAAAFAPv/AQAMAAYAAAAGAPv/AQANAAYAAAAHAPv/AQAMAAYAAAAIAPv/AQANAAYAAAAJAPv/AQAMAAYAAAAJAPz/AQAMAAcAAAAIAPz/AQANAAcAAAAHAPz/AQAMAAcAAAAGAPz/AQANAAcAAAAKAPz/AQANAAcAAAALAPz/AQAMAAcAAAAMAPz/AQANAAcAAAAMAPv/AQANAAYAAAALAPv/AQAMAAYAAAAKAPv/AQANAAYAAAAEAPr/AQANAAcAAAADAPr/AQAMAAcAAAAFAPr/AQAMAAcAAAAGAPr/AQANAAcAAAAHAPr/AQAMAAcAAAAIAPr/AQANAAcAAAAJAPr/AQAMAAcAAAAKAPr/AQANAAcAAAALAPr/AQAMAAcAAAAMAPr/AQANAAcAAAAMAPn/AQANAAYAAAAMAPj/AQANAAMAAAALAPj/AQAMAAMAAAD8//v/AQANAAYAAAD7//v/AQAMAAYAAAD6//v/AQANAAYAAAD4//v/AQANAAYAAAD3//v/AQAMAAYAAAD3//r/AQAMAAcAAAD2//v/AQANAAYAAAD2//r/AQANAAcAAAD2//n/AQANAAYAAAD2//j/AQANAAUAAAD2//f/AQANAAQAAAD2//b/AQANAAUAAAD3//b/AQAMAAUAAAD3//X/AQAMAAQAAAD4//X/AQANAAQAAAD5//X/AQAMAAQAAAD5//b/AQAMAAUAAAD5//f/AQAMAAQAAAD5//j/AQAMAAUAAAD4//j/AQANAAUAAAD4//n/AQANAAYAAAD3//n/AQAMAAYAAAD3//f/AQAMAAQAAAD4//b/AQANAAUAAAD6//T/AQANAAUAAAD7//T/AQAMAAcAAAD8//T/AQANAAcAAAD9//T/AQAMAAcAAAD+//T/AQANAAcAAAD///T/AQAMAAUAAAAAAPT/AQANAAUAAAABAPT/AQAMAAMAAAACAPT/AQANAAMAAAADAPT/AQAMAAMAAAADAPX/AQAMAAYAAAAEAPX/AQANAAYAAAADAPb/AQAMAAcAAAADAPf/AQAMAAYAAAACAPj/AQANAAUAAAABAPn/AQAMAAYAAAAAAPn/AQANAAYAAAD///n/AQAMAAYAAAD+//r/AQANAAcAAAD9//r/AQAMAAcAAAD9//n/AQAMAAYAAAD8//n/AQANAAYAAAD7//n/AQAMAAYAAAD6//j/AQANAAUAAAD6//f/AQANAAQAAAD7//b/AQAMAAcAAAD7//X/AQAMAAYAAAD+//P/AQANAAYAAAD///P/AQAMAAQAAAAAAPL/AQANAAUAAAABAPL/AQAMAAMAAAACAPL/AQANAAMAAAADAPL/AQAMAAMAAAAEAPL/AQANAAMAAAAFAPP/AQAMAAIAAAAGAPP/AQANAAIAAAAGAPT/AQANAAMAAAAGAPX/AQANAAYAAAAFAPX/AQAMAAYAAAAFAPb/AQAMAAcAAAAFAPf/AQAMAAYAAAAEAPf/AQANAAYAAAADAPj/AQAMAAcAAAACAPn/AQANAAYAAAABAPr/AQAMAAcAAAAAAPr/AQANAAcAAAD///r/AQAMAAcAAAD6//r/AQANAAcAAAD6//n/AQANAAYAAAD7//j/AQAMAAcAAAD7//f/AQAMAAYAAAD8//b/AQANAAcAAAD8//X/AQANAAYAAAD///L/AQAMAAUAAAAAAPH/AQANAAQAAAABAPH/AQAMAAIAAAACAPD/AQANAAMAAAADAPD/AQAMAAMAAAAEAPD/AQANAAMAAAAFAPD/AQAMAAMAAAAGAPD/AQANAAMAAAAHAPD/AQAMAAcAAAAIAPH/AQANAAYAAAAIAPL/AQANAAcAAAAIAPP/AQANAAYAAAAIAPT/AQANAAcAAAAIAPX/AQANAAYAAAAIAPb/AQANAAcAAAAHAPb/AQAMAAcAAAAHAPf/AQAMAAYAAAAGAPj/AQANAAcAAAAGAPn/AQANAAYAAAAFAPn/AQAMAAYAAAAEAPn/AQANAAYAAAADAPn/AQAMAAYAAAADAPP/AQAMAAIAAAAEAPH/AQANAAIAAAAIAPD/AQANAAcAAAAJAPD/AQAMAAcAAAAJAPH/AQAMAAYAAAAKAPH/AQANAAYAAAAKAPL/AQANAAcAAAAKAPP/AQANAAYAAAAJAPT/AQAMAAcAAAAJAPX/AQAMAAIAAAAIAPf/AQANAAYAAAAGAPf/AQANAAYAAAAFAPj/AQAMAAcAAAAEAPb/AQANAAcAAAADAPH/AQAMAAIAAAAGAPH/AQANAAIAAAAHAPH/AQAMAAYAAAAHAPL/AQAMAAcAAAAHAPX/AQAMAAYAAAALAPb/AQAMAAMAAAALAPX/AQAMAAIAAAALAPT/AQAMAAcAAAALAPP/AQAMAAYAAAALAPL/AQAMAAcAAAALAPH/AQAMAAYAAAALAPD/AQAMAAcAAAAKAPD/AQANAAcAAAAGAPL/AQANAAMAAAAFAPT/AQAMAAMAAAAEAPT/AQANAAMAAAAEAPj/AQANAAcAAAAEAO//AQANAAIAAAADAO//AQAMAAIAAAACAO//AQANAAIAAAABAO//AQAMAAIAAAAAAO//AQANAAIAAAD//+//AQAMAAIAAAD///D/AQAMAAMAAAD+//H/AQANAAYAAAD///H/AQAMAAQAAAACAPH/AQANAAIAAAAEAO7/AQANAAMAAAADAO7/AQAMAAMAAAADAO3/AQAMAAIAAAACAO7/AQANAAMAAAABAO7/AQAMAAMAAAAAAO7/AQANAAMAAAD+/+//AQANAAYAAAD9//D/AQAMAAcAAAD8//H/AQANAAYAAAD8//L/AQANAAcAAAD8//P/AQANAAYAAAD9//P/AQAMAAYAAAD+/+7/AQANAAcAAAD9/+7/AQAMAAcAAAD9/+//AQAMAAYAAAD8/+//AQANAAYAAAD7/+//AQAMAAYAAAD6//D/AQANAAcAAAD5//H/AQAMAAQAAAD5//L/AQAMAAUAAAD5//P/AQAMAAQAAAD5//T/AQAMAAUAAAD6//X/AQANAAQAAAD9//b/AQAMAAcAAAD+//b/AQANAAcAAAD///f/AQAMAAQAAAAAAPf/AQANAAQAAAABAPj/AQAMAAUAAAAHAPn/AQAMAAYAAAAIAPn/AQANAAYAAAAIAPj/AQANAAcAAAAHAPj/AQAMAAcAAAAGAPb/AQANAAcAAAACAPP/AQANAAIAAAD8//D/AQANAAcAAAD7//D/AQAMAAcAAAD6//H/AQANAAQAAAD7//L/AQAMAAcAAAD7//P/AQAMAAYAAAAAAPX/AQANAAQAAAABAPX/AQAMAAQAAAACAPX/AQANAAQAAAABAPP/AQAMAAIAAAD+//L/AQANAAcAAAD9//H/AQAMAAYAAAD7//H/AQAMAAYAAAD5//D/AQAMAAcAAAD+//X/AQANAAYAAAD///X/AQAMAAQAAAD///b/AQAMAAUAAAAAAPj/AQANAAUAAAD+//n/AQANAAYAAAD9//j/AQAMAAcAAAD8//j/AQANAAcAAAD6//b/AQANAAUAAAD4//T/AQANAAUAAAD4//P/AQANAAQAAAD4//L/AQANAAUAAAACAPb/AQANAAUAAAACAPf/AQANAAQAAAABAPf/AQAMAAQAAAAFAPL/AQAMAAMAAAAJAPP/AQAMAAYAAAAHAO//AQAMAAYAAAAIAO//AQANAAYAAAAJAPL/AQAMAAcAAAAHAPP/AQAMAAYAAAD6//P/AQANAAQAAAD6//L/AQANAAUAAAD9//L/AQAMAAcAAAAAAPP/AQANAAQAAAD///j/AQAMAAUAAAD+//j/AQANAAcAAAD8//f/AQANAAYAAAD5//n/AQAMAAYAAAD3//j/AQAMAAUAAAD4//f/AQANAAQAAAD1//v/AQAMAAYAAAD5//v/AQAMAAYAAAAAAPv/AQANAAYAAAABAPv/AQAMAAYAAAACAPv/AQANAAYAAAADAPv/AQAMAAYAAAAEAPv/AQANAAYAAAALAPn/AQAMAAYAAAAJAPn/AQAMAAYAAAAKAPn/AQANAAYAAAACAPr/AQANAAcAAAD7//r/AQAMAAcAAAD8//r/AQANAAcAAAD5//r/AQAMAAcAAAD4//r/AQANAAcAAAD1//n/AQAMAAYAAAD1//r/AQAMAAcAAAALAPf/AQAMAAIAAAAMAPf/AQANAAIAAAAJAPf/AQAMAAIAAAAJAPj/AQAMAAMAAAAKAPf/AQANAAIAAAAKAPj/AQANAAMAAAD9//f/AQAMAAYAAAD+//f/AQANAAYAAAD1//f/AQAMAAQAAAD1//j/AQAMAAUAAAD1//X/AQAMAAQAAAD1//b/AQAMAAUAAAD2//X/AQANAAQAAAD9//X/AQAMAAYAAAAAAPb/AQANAAUAAAABAPb/AQAMAAUAAAAJAPb/AQAMAAMAAAAKAPX/AQANAAIAAAAKAPb/AQANAAMAAAAMAPX/AQANAAIAAAAMAPb/AQANAAMAAAD1//P/AQAMAAQAAAD1//T/AQAMAAUAAAD2//P/AQANAAQAAAD2//T/AQANAAUAAAD3//P/AQAMAAQAAAD3//T/AQAMAAUAAAD1//H/AQAMAAQAAAD1//L/AQAMAAUAAAD2//H/AQANAAQAAAD2//L/AQANAAUAAAD3//H/AQAMAAQAAAD3//L/AQAMAAUAAAD4//H/AQANAAQAAAD1/+//AQAMAAYAAAD1//D/AQAMAAcAAAD2/+//AQANAAYAAAD2//D/AQANAAcAAAD3/+//AQAMAAYAAAD3//D/AQAMAAcAAAD4/+//AQANAAYAAAD4//D/AQANAAcAAAD5/+//AQAMAAYAAAD6/+//AQANAAYAAAD1/+3/AQAMAAYAAAD1/+7/AQAMAAcAAAD2/+3/AQANAAYAAAD2/+7/AQANAAcAAAD3/+3/AQAMAAYAAAD3/+7/AQAMAAcAAAD4/+3/AQANAAYAAAD4/+7/AQANAAcAAAD5/+3/AQAMAAYAAAD5/+7/AQAMAAcAAAD6/+3/AQANAAYAAAD6/+7/AQANAAcAAAD7/+3/AQAMAAYAAAD7/+7/AQAMAAcAAAD8/+3/AQANAAYAAAD8/+7/AQANAAcAAAD9/+3/AQAMAAYAAAD+/+3/AQANAAYAAAD+//D/AQANAAcAAAD//+3/AQAMAAIAAAD//+7/AQAMAAMAAAAAAO3/AQANAAIAAAABAO3/AQAMAAIAAAACAO3/AQANAAIAAAAEAO3/AQANAAIAAAAFAO3/AQAMAAIAAAAFAO7/AQAMAAMAAAAGAO3/AQANAAIAAAAGAO7/AQANAAMAAAAAAPD/AQANAAMAAAABAPD/AQAMAAMAAAAFAO//AQAMAAIAAAAGAO//AQANAAIAAAAFAPH/AQAMAAIAAAAEAPP/AQANAAIAAAAHAPT/AQAMAAcAAAAKAPT/AQANAAcAAAAMAPP/AQANAAYAAAAMAPT/AQANAAcAAAAMAPH/AQANAAYAAAAMAPL/AQANAAcAAAAJAO//AQAMAAYAAAAKAO//AQANAAYAAAALAO//AQAMAAYAAAAMAO//AQANAAYAAAAMAPD/AQANAAcAAAALAO3/AQAMAAYAAAALAO7/AQAMAAcAAAAMAO3/AQANAAYAAAAMAO7/AQANAAcAAAAJAO3/AQAMAAYAAAAJAO7/AQAMAAcAAAAKAO3/AQANAAYAAAAKAO7/AQANAAcAAAAHAO3/AQAMAAYAAAAHAO7/AQAMAAcAAAAIAO3/AQANAAYAAAAIAO7/AQANAAcAAAA=")
tile_set = ExtResource("3_0dsyt")

[node name="GameObjects" type="Node2D" parent="." index="3"]

[node name="WoodenChair" parent="GameObjects" index="0" instance=ExtResource("4_tj5fj")]
position = Vector2(-646, -2441)
rotation = 1.5708

[node name="Bed1" parent="GameObjects" index="1" instance=ExtResource("5_wnhah")]
position = Vector2(-1195, -2749)
scale = Vector2(0.6, 0.6)

[node name="SafeWithDoor" parent="GameObjects" index="2" instance=ExtResource("6_mtq8i")]
position = Vector2(1268, -3690)

[node name="Shelf1" parent="GameObjects" index="3" instance=ExtResource("7_a6ipv")]
position = Vector2(1253, -2774)
rotation = 1.5708

[node name="Boxes" parent="GameObjects" index="4" instance=ExtResource("8_jnptn")]
position = Vector2(2483, -2082)

[node name="Boxes2" parent="GameObjects" index="5" instance=ExtResource("8_jnptn")]
position = Vector2(2468, -1508)

[node name="Boxes3" parent="GameObjects" index="6" instance=ExtResource("8_jnptn")]
position = Vector2(484, -2084)

[node name="Boxes4" parent="GameObjects" index="7" instance=ExtResource("8_jnptn")]
position = Vector2(-2079, -1518)

[node name="Boxes5" parent="GameObjects" index="8" instance=ExtResource("8_jnptn")]
position = Vector2(-2084, -3688)

[node name="OfficeChair" parent="GameObjects" index="9" instance=ExtResource("9_hhg6s")]
position = Vector2(454, -3331)

[node name="Table1" parent="GameObjects" index="10" instance=ExtResource("10_qnfk3")]
position = Vector2(450, -3599)

[node name="Table2" parent="GameObjects" index="11" instance=ExtResource("11_1fsyt")]
position = Vector2(-860, -2417)

[node name="SofaChair2" parent="GameObjects" index="12" instance=ExtResource("12_led41")]
position = Vector2(-993, -3672)

[node name="TV" parent="GameObjects" index="13" instance=ExtResource("13_ikg8w")]
position = Vector2(-994, -3088)
rotation = -1.5708

[node name="Doors" type="Node2D" parent="." index="4"]

[node name="Door" parent="Doors" index="0" instance=ExtResource("14_06no4")]
position = Vector2(46, -600)

[node name="Door2" parent="Doors" index="1" instance=ExtResource("14_06no4")]
position = Vector2(46, -1401)

[node name="Door3" parent="Doors" index="2" instance=ExtResource("14_06no4")]
position = Vector2(200, -2754)
rotation = 1.5708

[node name="Door4" parent="Doors" index="3" instance=ExtResource("14_06no4")]
position = Vector2(-200, -2050)
rotation = 4.71239

[node name="Door10" parent="Doors" index="4" instance=ExtResource("14_06no4")]
position = Vector2(-1399, -3246)
rotation = 4.71239

[node name="Door11" parent="Doors" index="5" instance=ExtResource("14_06no4")]
position = Vector2(-1000, -849)
rotation = 4.71239

[node name="Door12" parent="Doors" index="6" instance=ExtResource("14_06no4")]
position = Vector2(1400, -1248)
rotation = 4.71239

[node name="Door5" parent="Doors" index="7" instance=ExtResource("14_06no4")]
position = Vector2(-753, -1800)

[node name="Door6" parent="Doors" index="8" instance=ExtResource("14_06no4")]
position = Vector2(-449, -3002)
rotation = 3.14159

[node name="Door7" parent="Doors" index="9" instance=ExtResource("14_06no4")]
position = Vector2(847, -2202)

[node name="Door8" parent="Doors" index="10" instance=ExtResource("14_06no4")]
position = Vector2(-1553, -1402)

[node name="Door9" parent="Doors" index="11" instance=ExtResource("14_06no4")]
position = Vector2(-1955, -3005)

[node name="Door13" parent="Doors" index="12" instance=ExtResource("14_06no4")]
position = Vector2(2047, -1401)

[node name="Door14" parent="Doors" index="13" instance=ExtResource("14_06no4")]
position = Vector2(2047, -2199)

[node name="Walls" type="TileMapLayer" parent="." index="5" groups=["Wall"]]
tile_map_data = PackedByteArray("AAAAAP7/AAADAAAAAAABAP7/AAADAAMAAAACAP7/AAACAAAAAAADAP7/AAADAAMAAAAEAP7/AAACAAAAAAAFAP7/AAACAAAAAAD///7/AAADAAMAAAD+//7/AAACAAAAAAD9//7/AAADAAMAAAD8//7/AAACAAAAAAD7//7/AAACAAAAAAD6//7/AAAAAAQAAAAGAP7/AAABAAQAAAD6//3/AAABAAEAAAD6//z/AAACAAMAAAD6//v/AAABAAEAAAD6//r/AAABAAEAAAD6//n/AAABAAEAAAAGAP3/AAABAAEAAAAGAPz/AAADAAIAAAAGAPv/AAABAAEAAAAGAPr/AAADAAIAAAAGAPn/AAABAAEAAAAGAPj/AAABAAEAAAAGAPf/AAABAAEAAAD6//j/AAACAAMAAAD6//f/AAABAAEAAAD6//b/AAAAAAMAAAAGAPb/AAABAAMAAAD7//b/AAACAAAAAAD8//b/AAACAAIAAAD9//b/AAACAAAAAAD+//b/AAACAAAAAAD///b/AAACAAIAAAAAAPb/AAACAAAAAAABAPb/AAACAAAAAAACAPb/AAACAAAAAAADAPb/AAACAAIAAAAEAPb/AAACAAAAAAAFAPb/AAACAAAAAAD8//f/AAACAAEAAAD7//j/AAADAAAAAAD8//j/AAADAAMAAAD9//j/AAACAAIAAAD///j/AAADAAEAAAD+//j/AAADAAAAAAD///f/AAABAAEAAAD9//n/AAABAAEAAAD9//r/AAABAAEAAAD9//v/AAACAAMAAAD9//z/AAADAAIAAAD9//3/AAACAAEAAAABAPr/AAACAAIAAAAEAPr/AAACAAIAAAABAPv/AAABAAEAAAABAPz/AAADAAIAAAABAP3/AAABAAEAAAD///3/AAABAAEAAAD///z/AAACAAMAAAD///v/AAADAAIAAAAAAPz/AAADAAAAAAD///r/AAACAAEAAAAAAPr/AAAAAAQAAAD///n/AAABAAEAAAAAAPn/AAACAAEAAAAAAPj/AAABAAMAAAD+//v/AAADAAAAAAD7//z/AAACAAAAAAD8//z/AAADAAAAAAADAPf/AAABAAEAAAADAPj/AAABAAEAAAADAPn/AAABAAEAAAADAPr/AAADAAMAAAACAPr/AAADAAAAAAADAP3/AAABAAEAAAADAPz/AAACAAEAAAADAPv/AAAAAAMAAAAEAPv/AAADAAIAAAAFAPz/AAADAAAAAAAEAPz/AAAAAAQAAAAFAPr/AAADAAAAAAA=")
tile_set = ExtResource("15_gwnce")

[node name="Player" parent="." index="6"]
position = Vector2(178, -369)

[node name="Camera2D" parent="." index="7"]
position = Vector2(178, -369)
zoom = Vector2(0.6, 0.6)

[node name="PhantomCamera2D" parent="." index="8"]
position = Vector2(178, -369)
zoom = Vector2(0.6, 0.6)

[node name="CollisionShape2D" parent="FinishZone" index="0"]
position = Vector2(204.5, -209.5)
shape = SubResource("RectangleShape2D_xhefo")
